Bail out of resetting a URL's engagement if the URL is not valid.

This speculatively addresses a DCHECK failure when the history service
expires a URL on startup and notifies the site engagement service of it.
Occasionally, the URL sent to site engagement is invalid, triggering the
DCHECK.

BUG=612881

Review-Url: https://codereview.chromium.org/2002443002
Cr-Commit-Position: refs/heads/master@{#394991}

Former-commit-id: b30352f5c5bb51c5be8d3e147080729794f1d6a3